added more code to compare_ref_photon_height_with_lidar.ipynb

--- a/ICESat-2_codes/compare_ref_photon_height_with_lidar.ipynb
+++ b/ICESat-2_codes/compare_ref_photon_height_with_lidar.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d9332c7c",
+   "id": "aedbc4f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4225e887",
+   "id": "a86106d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "         ### Drop pixels with no-data value and canopy openness value equal to 3.4028235e+38\n",
     "         ## Consider only pixels with h_canopy_uncertainty < 10\n",
     "         canopy_height_data = canopy_height_data[canopy_height_data[\"canopy_openness\"] < 1e+38]\n",
-    "         canopy_height_data = canopy_height_data[canopy_height_data[\"h_canopy_uncertainty\"] < 10]\n",
+    "         canopy_height_data = canopy_height_data[canopy_height_data[\"h_canopy_uncertainty\"] < 5]\n",
     "        \n",
     "         ### Consider only pixels within the Cabo Rojo region\n",
     "         canopy_height_data = canopy_height_data[(canopy_height_data[\"lats\"]>18) & \n",
@@ -125,8 +125,156 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "75340214",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"/home/shashank/Downloads/icesat2/icesat2_data/ATL08\")\n",
+    "atl08 = pd.read_csv(\"ATL08_shortlisted_segments.csv\", header=0)\n",
+    "atl08 = atl08[atl08[\"h_canopy_uncertainty\"]<5].reset_index(drop=True)\n",
+    "\n",
+    "## Create a list of 20-m segment ids \n",
+    "seg_20m_list = []\n",
+    "for i in range(0, len(atl08)):\n",
+    "    for j in range(int(atl08[\"seg_id_begin\"][i]), int(atl08[\"seg_id_end\"][i] + 1)):\n",
+    "        seg_20m_list.append(j)\n",
+    "\n",
+    "## Then extract the ATL03 parameters. This code considers only one h5 file. Complete analysis on Theseus.\n",
+    "\n",
+    "os.chdir('/home/shashank/Downloads/icesat2/icesat2_data/ATL03/sample_h5_cabo_rojo')\n",
+    "f = h5py.File('ATL03_20181028191317_04610101_004_01.h5', 'r')\n",
+    "atl03_photon_data = pd.DataFrame([], columns=[\"reference_ph_lat\", \"reference_ph_lon\", \"segment_id\", \n",
+    "                                              \"index_within_seg\"])\n",
+    "\n",
+    "beam_numbers = ['/gt1r', '/gt2r', '/gt3r']\n",
+    "\n",
+    "for beam in beam_numbers:\n",
+    "    #ph_lats = pd.DataFrame(f[beam + '/heights/lat_ph'][:])\n",
+    "    #ph_lons = pd.DataFrame(f[beam + '/heights/lon_ph'][:])\n",
+    "    #id_count = pd.DataFrame(f[beam + '/heights/ph_id_count'][:])\n",
+    "    #quality = pd.DataFrame(f[beam + '/heights/quality_ph'][:]) ## value >= 1 : possible afterpulse\n",
+    "    ref_ph_index_within_seg = pd.DataFrame(f[beam + '/geolocation/reference_photon_index'][:], columns=[\"\"])\n",
+    "    ref_ph_lat = pd.DataFrame(f[beam + '/geolocation/reference_photon_lat'][:])\n",
+    "    ref_ph_lon = pd.DataFrame(f[beam + '/geolocation/reference_photon_lon'][:])\n",
+    "    seg_id = pd.DataFrame(f[beam + '/geolocation/segment_id'][:])\n",
+    "    \n",
+    "    ## Combine reference photon information\n",
+    "    ref_ph = pd.concat([ref_ph_lat, ref_ph_lon, seg_id, ref_ph_index_within_seg], axis=1)\n",
+    "    ref_ph.columns = atl03_photon_data.columns\n",
+    "    \n",
+    "    ## Extract only those 20-m segment ids which exist in atl08 shortlist \n",
+    "    ref_ph = ref_ph[ref_ph[\"segment_id\"].isin(seg_20m_list)].reset_index(drop=True)\n",
+    "    \n",
+    "    atl03_photon_data = atl03_photon_data.append(ref_ph, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "42bac180",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  segment_id ph_index  ph_height\n",
+      "0         11      746  76.948997\n",
+      "1         12      442  75.489204\n",
+      "2         12      526  75.669113\n",
+      "3         12      654  75.663261\n",
+      "4         12      822  73.567245\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Extract canopy heights from ATL08 photon data. \n",
+    "os.chdir('/home/shashank/Downloads/icesat2/icesat2_data/ATL08')\n",
+    "f = h5py.File('ATL08_20181028191317_04610101_004_01.h5', 'r')\n",
+    "\n",
+    "atl08_photon_data = pd.DataFrame([], columns=[\"segment_id\", \"ph_index\",  \n",
+    "                                              \"ph_height\"])\n",
+    "\n",
+    "for beam in beam_numbers:\n",
+    "   classed_PC_indx = pd.DataFrame(f[beam + '/signal_photons/classed_pc_indx'][:])\n",
+    "   ph_segment_id = pd.DataFrame(f[beam + '/signal_photons/ph_segment_id'][:])\n",
+    "   photon_class = pd.DataFrame(f[beam + '/signal_photons/classed_pc_flag'][:]) ## 0: noise, 1: ground, 2:canopy, 3: TOC\n",
+    "   ph_h = pd.DataFrame(f[beam + '/signal_photons/ph_h'][:])\n",
+    "   d_flag = pd.DataFrame(f[beam + '/signal_photons/d_flag'][:]) ## 0:noise 1:signal\n",
+    "   \n",
+    "   photon_df = pd.concat([ph_segment_id, classed_PC_indx, ph_h, photon_class,  d_flag], axis=1)\n",
+    "   photon_df.columns = [\"segment_id\", \"ph_index\", \"ph_height\", \"photon_class\", \"d_flag\"]\n",
+    "   photon_df = photon_df[photon_df[\"d_flag\"]==1].reset_index(drop=True)\n",
+    "   photon_df = photon_df[(photon_df[\"photon_class\"] == 2) | (photon_df[\"photon_class\"] == 3)].reset_index(drop=True)\n",
+    "   photon_df = photon_df.drop(columns=[\"photon_class\", \"d_flag\"], axis=1)\n",
+    "   atl08_photon_data = atl08_photon_data.append(photon_df)\n",
+    "print(atl08_photon_data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "c2a49404",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(18596, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "common_seg_ids = np.intersect1d(atl08_photon_data[\"segment_id\"], atl03_photon_data[\"segment_id\"])\n",
+    "atl03_common_seg = atl03_photon_data[atl03_photon_data[\"segment_id\"].isin(common_seg_ids)].reset_index(drop=True)\n",
+    "atl08_common_seg = atl08_photon_data[atl08_photon_data[\"segment_id\"].isin(common_seg_ids)].reset_index(drop=True)\n",
+    "print(atl08_common_seg.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ba0ccd7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(508, 3)\n",
+      "   reference_ph_lat  reference_ph_lon  ph_height\n",
+      "0         17.997445        -66.838402   3.303221\n",
+      "1         17.997807        -66.838442   4.151279\n",
+      "2         17.997984        -66.838461   2.479109\n",
+      "3         18.019217        -66.810438  20.451130\n",
+      "4         18.019396        -66.810457  19.704277\n"
+     ]
+    }
+   ],
+   "source": [
+    "ref_ph_lat_lon_h = pd.DataFrame([], columns=[\"reference_ph_lat\", \"reference_ph_lon\", \"ph_height\"])\n",
+    "\n",
+    "for seg_id in common_seg_ids:\n",
+    "    atl03_sub = atl03_common_seg[atl03_common_seg[\"segment_id\"] == seg_id].reset_index(drop=True)\n",
+    "    atl08_sub = atl08_common_seg[atl08_common_seg[\"segment_id\"] == seg_id].reset_index(drop=True)\n",
+    "    if len(np.intersect1d(atl03_sub[\"index_within_seg\"], atl08_sub[\"ph_index\"])) > 0:\n",
+    "       for i in np.intersect1d(atl03_sub[\"index_within_seg\"], atl08_sub[\"ph_index\"]):\n",
+    "          lat = atl03_sub[atl03_sub[\"index_within_seg\"] == i][\"reference_ph_lat\"].reset_index(drop=True)\n",
+    "          lon = atl03_sub[atl03_sub[\"index_within_seg\"] == i][\"reference_ph_lon\"].reset_index(drop=True)\n",
+    "          height = atl08_sub[atl08_sub[\"ph_index\"] == i][\"ph_height\"].reset_index(drop=True)\n",
+    "          photon_info = pd.concat([lat, lon, height], axis=1)\n",
+    "          ref_ph_lat_lon_h = ref_ph_lat_lon_h.append(photon_info, ignore_index=True)\n",
+    "    \n",
+    "print(ref_ph_lat_lon_h.shape)\n",
+    "print(ref_ph_lat_lon_h.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e17aae5b",
+   "id": "68ca6d80",
    "metadata": {},
    "outputs": [],
    "source": []
