added the location for the code compare_ref_photon_height_with_lidar.py on Theseus

--- a/ICESat-2_codes/compare_ref_photon_height_with_lidar.ipynb
+++ b/ICESat-2_codes/compare_ref_photon_height_with_lidar.ipynb
@@ -140,7 +140,8 @@
     "    for j in range(int(atl08[\"seg_id_begin\"][i]), int(atl08[\"seg_id_end\"][i] + 1)):\n",
     "        seg_20m_list.append(j)\n",
     "\n",
-    "## Then extract the ATL03 parameters. This code considers only one h5 file. Complete analysis on Theseus.\n",
+    "## Then extract the ATL03 parameters. This code considers only one h5 file. Complete analysis on Theseus. \n",
+    "## The Theseus code is present at the location /home/vk5/icesat_2\n",
     "\n",
     "os.chdir('/home/shashank/Downloads/icesat2/icesat2_data/ATL03/sample_h5_cabo_rojo')\n",
     "f = h5py.File('ATL03_20181028191317_04610101_004_01.h5', 'r')\n",
@@ -215,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "c2a49404",
+   "id": "46edcd3c",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "ba0ccd7e",
+   "id": "849d6124",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68ca6d80",
+   "id": "3fc7c37d",
    "metadata": {},
    "outputs": [],
    "source": []
