added data download function

--- a/ML_projects/housing_data.ipynb
+++ b/ML_projects/housing_data.ipynb
@@ -1,19 +1,117 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2ce4d1bc-e550-4682-b15c-1442f48e8d64",
+   "metadata": {},
+   "source": [
+    "## Fetch housing data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "432c81eb-2679-4502-8be2-3dd1e0962d92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+      "0        -122.23     37.88                41.0        880.0           129.0   \n",
+      "1        -122.22     37.86                21.0       7099.0          1106.0   \n",
+      "2        -122.24     37.85                52.0       1467.0           190.0   \n",
+      "3        -122.25     37.85                52.0       1274.0           235.0   \n",
+      "4        -122.25     37.85                52.0       1627.0           280.0   \n",
+      "...          ...       ...                 ...          ...             ...   \n",
+      "20635    -121.09     39.48                25.0       1665.0           374.0   \n",
+      "20636    -121.21     39.49                18.0        697.0           150.0   \n",
+      "20637    -121.22     39.43                17.0       2254.0           485.0   \n",
+      "20638    -121.32     39.43                18.0       1860.0           409.0   \n",
+      "20639    -121.24     39.37                16.0       2785.0           616.0   \n",
+      "\n",
+      "       population  households  median_income  median_house_value  \\\n",
+      "0           322.0       126.0         8.3252            452600.0   \n",
+      "1          2401.0      1138.0         8.3014            358500.0   \n",
+      "2           496.0       177.0         7.2574            352100.0   \n",
+      "3           558.0       219.0         5.6431            341300.0   \n",
+      "4           565.0       259.0         3.8462            342200.0   \n",
+      "...           ...         ...            ...                 ...   \n",
+      "20635       845.0       330.0         1.5603             78100.0   \n",
+      "20636       356.0       114.0         2.5568             77100.0   \n",
+      "20637      1007.0       433.0         1.7000             92300.0   \n",
+      "20638       741.0       349.0         1.8672             84700.0   \n",
+      "20639      1387.0       530.0         2.3886             89400.0   \n",
+      "\n",
+      "      ocean_proximity  \n",
+      "0            NEAR BAY  \n",
+      "1            NEAR BAY  \n",
+      "2            NEAR BAY  \n",
+      "3            NEAR BAY  \n",
+      "4            NEAR BAY  \n",
+      "...               ...  \n",
+      "20635          INLAND  \n",
+      "20636          INLAND  \n",
+      "20637          INLAND  \n",
+      "20638          INLAND  \n",
+      "20639          INLAND  \n",
+      "\n",
+      "[20640 rows x 10 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import tarfile\n",
+    "import urllib.request\n",
+    "import os\n",
+    "\n",
+    "def load_housing_data():\n",
+    "    url = \"https://github.com/ageron/data/raw/main/housing.tgz\"\n",
+    "    \n",
+    "    ## Save the tar file \n",
+    "    current_dir = os.getcwd()\n",
+    "    output_file = \"\\housing.tgz\"\n",
+    "    output_path = current_dir + output_file\n",
+    "    urllib.request.urlretrieve(url, output_path)\n",
+    "\n",
+    "    with tarfile.open(output_path) as housing_tar:\n",
+    "        housing_tar.extractall(path=current_dir)\n",
+    "\n",
+    "    os.chdir(current_dir + \"/housing/\")\n",
+    "    data = pd.read_csv(\"housing.csv\", header=0)\n",
+    "    return(data)\n",
+    "    \n",
+    "data = load_housing_data()\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "eae2cfd1-fa94-41f6-8866-87e6b57f943c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\konduri\\Desktop\\Codes\\ML_projects\\housing.tgz\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "print(output_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eae2cfd1-fa94-41f6-8866-87e6b57f943c",
+   "id": "874c4a99-b1b8-4294-b80e-0bee1458ab0d",
    "metadata": {},
    "outputs": [],
    "source": []
