made progress in chap1 exercise

--- a/ML_projects/geron_chap1_exercise.ipynb
+++ b/ML_projects/geron_chap1_exercise.ipynb
@@ -93,8 +93,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2e486c09-88fa-48df-a046-adbe8c270f33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "numeric_imputer = SimpleImputer(strategy = \"median\")\n",
+    "categorical_imputer = SimpleImputer(strategy = \"most_frequent\")\n",
+    "\n",
+    "housing_num = housing.select_dtypes(include=\"float64\")\n",
+    "housing_cat = housing.select_dtypes(include=\"object\")\n",
+    "\n",
+    "housing_num = pd.DataFrame(numeric_imputer.fit_transform(housing_num), columns=housing_num.columns, index=housing_num.index)\n",
+    "housing_cat = pd.DataFrame(categorical_imputer.fit_transform(housing_cat), columns=housing_cat.columns, index=housing_cat.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51611e4b-8115-4d4f-80e1-7e3c67e6b83f",
+   "metadata": {},
+   "source": [
+    "## One hot encode the categorical feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f9f8f66f-8bca-43f2-b5e6-b789d702a76a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "ohe = OneHotEncoder()\n",
+    "onehot_encoded = ohe.fit_transform(housing_cat).toarray()\n",
+    "\n",
+    "ohe_column_names = []\n",
+    "for i in ohe.categories_[0]:\n",
+    "  ohe_column_names.append(housing_cat.columns[0] + \"_\" + i)\n",
+    "\n",
+    "onehot_encoded_df = pd.DataFrame(onehot_encoded, index=housing_cat.index, columns=ohe_column_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "671e9936-b693-4e68-9f9e-9795268cc85c",
+   "metadata": {},
+   "source": [
+    "## Calculate new ratios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "732d1597-faa6-4547-a5d1-d776d60f7fe7",
    "metadata": {},
    "outputs": [],
    "source": []
